--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
     "supervisor": "^0.12.0",
     "validator": "^13.7.0"
   },
